--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,17 +6,26 @@
   <h1 class ='hero-text'>GURU GUIDES SIGN UP</h1>
   <div class="hero-signup">
     <h2>Sign up here</h2>
-    <form class="" action="/createuser" method="post">
+    <%= form_tag '/createuser', method: 'post' do %>
+
       <input type="email" name="email" value="" placeholder="Email" class= "input-signup">
-      <input type="text" name="full-name" value="" placeholder="Full Name" class= "input-signup">
-      <input type="text" name="address1" value="" placeholder="Address Line 1" class= "input-signup">
-      <input type="text" name="address2" value="" placeholder="Address Line 2" class= "input-signup">
+
+      <input type="text" name="full_name" value="" placeholder="Full Name" class= "input-signup">
+
+      <input type="text" name="address_1" value="" placeholder="Address Line 1" class= "input-signup">
+
+      <input type="text" name="address_2" value="" placeholder="Address Line 2" class= "input-signup">
+
       <input type="text" name="city" value="" placeholder="City" class= "input-signup">
+
       <input type="text" name="state" value="" placeholder="State/Province/Region" class= "input-signup">
+
       <input type="text" name="country" value="" placeholder="Country" class= "input-signup">
-      <input type="text" name="postcode" value="" placeholder="Postcode/Zip" class= "input-signup">
+
+      <input type="text" name="zip_code" value="" placeholder="Postcode/Zip" class= "input-signup">
+
       <input type="password" name="password" value="" placeholder="Create a password" class= "input-signup">
-      <button class="btn btn-primary btn-lg round">Sign Up</button>
-    </form>
+      <button class="btn">Sign Up</button>
+    <% end %>
   </div>
 </div>
