started work on landing page, added skeleton css

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,31 +1,66 @@
-<div class="login-btn"><a href="/login">Login</a></div>
+<%if !logged_in? %>
 
+  <nav>
+    <%= form_tag '/session', method: 'post' do %>
+      <label for="">email</label>
+      <input type="text" name="email">
+      <label for="">password</label>
+      <input type="password" name="password">
+      <label></label>
+      <button>login</button>
 
-
-<div class="hero">
-  <h1 class ='hero-text'>GURU GUIDES SIGN UP</h1>
-  <div class="hero-signup">
-    <h2>Sign up here</h2>
-    <%= form_tag '/createuser', method: 'post' do %>
-
-      <input type="email" name="email" value="" placeholder="Email" class= "input-signup">
-
-      <input type="text" name="full_name" value="" placeholder="Full Name" class= "input-signup">
-
-      <input type="text" name="address_1" value="" placeholder="Address Line 1" class= "input-signup">
-
-      <input type="text" name="address_2" value="" placeholder="Address Line 2" class= "input-signup">
-
-      <input type="text" name="city" value="" placeholder="City" class= "input-signup">
-
-      <input type="text" name="state" value="" placeholder="State/Province/Region" class= "input-signup">
-
-      <input type="text" name="country" value="" placeholder="Country" class= "input-signup">
-
-      <input type="text" name="zip_code" value="" placeholder="Postcode/Zip" class= "input-signup">
-
-      <input type="password" name="password" value="" placeholder="Create a password" class= "input-signup">
-      <button class="btn">Sign Up</button>
     <% end %>
+
+  </nav>
+
+
+
+  <div class="column one-half left">
+    <img src="http://www.fillmurray.com/200/300">
   </div>
+
+  <div class="column one-half right">
+    <h1 class ='hero-text'>GURU GUIDES SIGN UP</h1>
+    <div class="hero-signup">
+      <h2>Sign up here</h2>
+      <%= form_tag '/createuser', method: 'post' do %>
+
+        <input type="email" name="email" value="" placeholder="Email" class= "input-signup">
+
+        <input type="text" name="full_name" value="" placeholder="Full Name" class= "input-signup">
+
+        <input type="text" name="address_1" value="" placeholder="Address Line 1" class= "input-signup">
+
+        <input type="text" name="address_2" value="" placeholder="Address Line 2" class= "input-signup">
+
+        <input type="text" name="city" value="" placeholder="City" class= "input-signup">
+
+        <input type="text" name="state" value="" placeholder="State/Province/Region" class= "input-signup">
+
+        <input type="text" name="country" value="" placeholder="Country" class= "input-signup">
+
+        <input type="text" name="zip_code" value="" placeholder="Postcode/Zip" class= "input-signup">
+
+        <input type="password" name="password" value="" placeholder="Create a password" class= "input-signup">
+        <button class="btn">Sign Up</button>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
+
+<%= if logged_in then %>
+
+<div class="column one-half">
+  <div>
+    Hey there <%= user.fullName %>
+  </div>
+
+  <a href="/session/[:id]" class="spacing">Start guiding</a>
+
+  <form action="/session" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <button>logout</button>
+
+  </form>
 </div>
