--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,21 @@
   <head>
     <title>GuruGuides</title>
     <%= csrf_meta_tags %>
-
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <link style="assets/stylesheets/main.css" >
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+  <nav>
+    <img class="logo" src="http://www.fillmurray.com/200/300" alt="GURU GUIDES LOGO">
+  </nav>
+
+
     <%= yield %>
+  </div>
+
   </body>
 </html>
