--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:error].present? %>
+<div><%= flash[:error] %></div>
+<% end %>
+
 <%if !logged_in? %>
 <nav>
   <%= form_tag '/session', method: 'post' do %>
