--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,16 @@
-<h1>this needs work</h1>
+
+<header>
+  <div class="greeting">Hey there <%= current_user.full_name %> </div>
+</header>
+
+
+<div class="history">
+  <h3>History</h3>
+</div>
+
+<div class="diary">
+  <h3><label>Diary</label></h3>
+
+    <input type="text" name="diary-box" class="diary-box">
+    <button class=>post</button>
+</div>
