--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <!--HEADER STARTS HERE  -->
   <div class="top-nav">
-    <div class="header-main-right">
+    <div class="header-main-right u-cf">
       <div class="logo u-pull-left"><a href="/"><img src="http://www.fillmurray.com/100/100"></a>
       </div>
       <div class="header-main-right-nav u-pull-right">
