map uploaded in plan erb

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -22,6 +22,10 @@
       <% end %>
     </div>
   </div>
-  <div class="six columns map">Map goes here</div>
+  <div class="six columns map"> Map goes here  </div>
   <div class="three columns events-eats">Hello</div>
 </div>
+
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVJjOAHWGEr2E1f5AMR2RZDoJ8maw41N4&callback=showMap">
+</script>
