--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
     <div class="container">
 
       <div class="column one-half left">
-        <h2><i class="em em-wave"></h2></i><h1 class="hero-text">Hi, welcome to Guru Guides</h1>
+        <h1 class="hero-text">Hi, welcome to Guru Guides</h1>
       </div>
 
       <div class="column one-half right">
@@ -41,5 +41,5 @@
   <div class="column one-half">
   </div>
 
-  <button class="start-guiding">Start guiding</button>
+  <a href="/plans" class="button start-guiding">Start Guiding</a>
 <% end %>
