fixed previous fix

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -43,7 +43,7 @@
       <div class="items">
         {{#each saved_eats}}
         <div>
-          <div>{{saved_eats.eat.title}}</div>
+          <div>{{this.eat.title}}</div>
         </div>
         {{/each}}
       </div>
