map updates based on search selection and on plan click; added hover styling to plan item; pages.js and plan.js only load in their respective pages

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -124,6 +124,10 @@ body {
   padding: .5em;
 }
 
+.plan:hover {
+  background: #a3a9ec;
+}
+
 .events, .eats {
   background: lightblue;
   margin-bottom: 1em;
