--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,10 +4,12 @@
 
 <%if !logged_in? %>
 
-    <div class="container">
+    <div class="landing-container">
 
       <div class="column one-half left">
-        <h1 class="hero-text">Hi, welcome to Guru Guides</h1>
+        <div class="hero-text">
+          <h1>Hi, welcome to Guru Guides</h1>
+        </div>
       </div>
 
       <div class="column one-half right">
