--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,37 @@
-<container>
+<div class="account-container">
   <div class="header">
     <div class="greeting">Hey there <%= current_user.full_name %> </div>
   </div>
 
   <div class="history">
     <h3>History</h3>
-
-    <% current_user.plans.each do |plan| %>
-      <%= plan.address %>
-      <%= plan.arrival_date %>
-      <%= plan.departure_date %>
-
-    <% end %>
-
-  </div>
-
-  <div class="diary">
-    <h3>Diary</h3>
-    <section class="diary-entries">
-      <% current_user.comments.each do |comment| %>
-      <div class="entry">
-        <p>
-          <%= comment.body %>
-        </p>
-      <% end %>
+      <div class="history-card">
+        <% current_user.plans.each do |plan| %>
+          <div class="plan-card">
+            Address: <%= plan.address %><br>
+            Date of arrival: <%= plan.arrival_date %><br>
+            Date of departure: <%= plan.departure_date %><br>
+          </div>
+        <% end %>
       </div>
-    </section>
-
-    <section class="new-entry">
-      <form action="/users/<%= current_user.id %>" method="post">
-        <input name="post" placeholder="Record your journey">
-      <button></button>
-      </form>
-    </section>
-
-
   </div>
+
+
+    <div class="diary">
+
+
+      <h3>Diary</h3>
+
+      <p>{{ body }}</p>
+
+      <input type="text" value="{{ body }}">
+      <button
+    </div>
+
+
+
+
+
+
 
 </container>
