second commit show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,13 +19,13 @@
 
     <div class="diary">
 
-
+    <form action="/show/<%= @current_user.id %>" method="post">
       <h3>Diary</h3>
 
       <p>{{ body }}</p>
 
       <input type="text" value="{{ body }}">
-      <button
+      <button ></button>
     </div>
 
 
