changes to styling, diary SPA working

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -135,6 +135,16 @@ body {
 
 }
 
+.diary-left {
+  float: left;
+  width: 45%;
+}
+
+.diary-right {
+  float: right;
+  width: 45%;
+}
+
 /*JOURNEY PLANNER PAGE*/
 
 .planner {
