--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -29,11 +29,11 @@
 
 <script id="plan-template" type="text/x-handlebars-template">
   <div class="plan" data-lat="{{latitude}}" data-lng="{{longitude}}">
-    <p>
-      {{address}}
+    <div class="details">
+      <p class="address">{{address}}</p>
       <div>Arrive: {{arrival_date}}</div>
       <div>Depart: {{departure_date}}</div>
-    </p>
+    </div>
     <div class="events">
       <header>Events</header>
       <div class="items">
