--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -64,3 +64,18 @@
     </div>
   </div>
 </script>
+
+<script id="event-template" type="text/x-handlebars-template">
+  <div class="event" data-lat="{{latitude}}" data-lng="{{longitude}}">
+    <div>{{title}}</div>
+    <div>{{date}}</div>
+    <div>{{info}}</div>
+  </div>
+</script>
+
+<script id="eat-template" type="text/x-handlebars-template">
+  <div class="eat" data-lat="{{latitude}}" data-lng="{{longitude}}">
+    <div>{{title}}</div>
+    <div>{{info}}</div>
+  </div>
+</script>
